--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* body{
+  padding-left: 40px;
+  padding-right: 40px;
+} */
+
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -31,10 +37,7 @@ body {
   display: flex;
   flex-direction: column;
   place-items: center;
-  /* align-items: center; */
-  /* justify-content: center; */
   min-width: 320px;
-  /* width: 100vh; */
   min-height: 100vh;
 }
 
@@ -46,7 +49,6 @@ h1 {
 button, input{
   border-radius: 8px;
   border: 1px solid transparent;
-  /* padding: 0.6em 1.2em; */
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -71,7 +73,4 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
-    /* background-color: #f9f9f9; */
-  }
-}
+} */
